--- a/M3U8TOMP4Demo/M3U8TOMP4Demo.xcodeproj/xcshareddata/xcschemes/M3U8TOMP4Demo.xcscheme
+++ b/M3U8TOMP4Demo/M3U8TOMP4Demo.xcodeproj/xcshareddata/xcschemes/M3U8TOMP4Demo.xcscheme
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
-   LastUpgradeVersion = "1100"
+   LastUpgradeVersion = "1120"
    version = "1.3">
    <BuildAction
       parallelizeBuildables = "YES"
@@ -50,6 +50,13 @@
             ReferencedContainer = "container:M3U8TOMP4Demo.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
+      <AdditionalOptions>
+         <AdditionalOption
+            key = "NSZombieEnabled"
+            value = "YES"
+            isEnabled = "YES">
+         </AdditionalOption>
+      </AdditionalOptions>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
